<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="271dp"
        android:layout_height="58dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/autour_one"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="277dp"
        android:layout_height="55dp"
        android:ems="10"
        android:fontFamily="@font/autour_one"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.135" />

    <Button
        android:id="@+id/btn_Sign_In"
        android:layout_width="209dp"
        android:layout_height="54dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.231" />

    <Button
        android:id="@+id/btn_Create_Account"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Sign_In"
        app:layout_constraintVertical_bias="0.219" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="143dp"
        android:layout_height="22dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toTopOf="@+id/btn_Sign_In"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/Tommy"
        android:layout_width="245dp"
        android:layout_height="202dp"
        android:contentDescription="@string/tommy"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395"
        app:srcCompat="@drawable/tomatoface" />

    <TextView
        android:id="@+id/txtSqueezeMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:text="@string/click_me"
        android:textAllCaps="false"
        android:textColor="#E41506"
        android:textColorLink="#ED0909"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />


</androidx.constraintlayout.widget.ConstraintLayout>