<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <Button
        android:id="@+id/set_time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:onClick="setTime"
        android:text="@string/time_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimePicker"
        android:visibility="invisible"/>

    <TimePicker
        android:id="@+id/startTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/set_time_picker_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:text="@string/time_selected"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toTopOf="@+id/set_time_picker_button"
        app:layout_constraintEnd_toEndOf="@+id/set_time_picker_button"
        app:layout_constraintStart_toStartOf="@+id/set_time_picker_button"
        app:layout_constraintTop_toBottomOf="@+id/startTimePicker"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:onClick="newCategory"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintRight_toRightOf="@id/tv_title"
        app:layout_constraintTop_toTopOf="@id/tv_title" />

    <Spinner
        android:id="@+id/categoryDropDown"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:overlapAnchor="false"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/v"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHeight_min="@+id/editTaskName"
        android:background= "#D3D0D0"/>

    <View
        android:id="@+id/v"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/editTaskName"
        app:layout_constraintLeft_toLeftOf="@id/categoryDropDown"
        app:layout_constraintRight_toRightOf="@id/categoryDropDown"
        app:layout_constraintTop_toBottomOf="@id/categoryDropDown"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/editTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/edit_task"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/startTimeButton"
        app:layout_constraintLeft_toLeftOf="@id/categoryDropDown"
        app:layout_constraintRight_toRightOf="@id/categoryDropDown"
        app:layout_constraintTop_toBottomOf="@+id/v" />

    <Button
        android:id="@+id/startTimeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/edit_starttime"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/endTimeButton"
        app:layout_constraintLeft_toLeftOf="@id/categoryDropDown"
        app:layout_constraintRight_toRightOf="@id/categoryDropDown"
        app:layout_constraintTop_toBottomOf="@+id/editTaskName" />

    <Button
        android:id="@+id/endTimeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/edit_endtime"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/editNumBreaks"
        app:layout_constraintLeft_toLeftOf="@id/categoryDropDown"
        app:layout_constraintRight_toRightOf="@id/categoryDropDown"
        app:layout_constraintTop_toBottomOf="@+id/startTimeButton" />

    <EditText
        android:id="@+id/editNumBreaks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="Number of Breaks"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editShortBreak"
        app:layout_constraintLeft_toLeftOf="@id/categoryDropDown"
        app:layout_constraintRight_toRightOf="@id/categoryDropDown"
        app:layout_constraintTop_toBottomOf="@+id/endTimeButton" />

    <EditText
        android:id="@+id/editShortBreak"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/edit_shortbreak"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/create_button"
        app:layout_constraintLeft_toLeftOf="@id/categoryDropDown"
        app:layout_constraintRight_toRightOf="@id/categoryDropDown"
        app:layout_constraintTop_toBottomOf="@+id/editNumBreaks" />

   <!-- <EditText
        android:id="@+id/editTextTime4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/edit_longbreak"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/create_button"
        app:layout_constraintLeft_toLeftOf="@id/categoryDropDown"
        app:layout_constraintRight_toRightOf="@id/categoryDropDown"
        app:layout_constraintTop_toBottomOf="@+id/editShortBreak" />
-->
    <Button
        android:id="@+id/create_button"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/red"
        android:onClick="@string/button_create"
        android:text="@string/button_create"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/categoryDropDown"
        app:layout_constraintRight_toRightOf="@id/categoryDropDown"
        app:layout_constraintTop_toBottomOf="@+id/editShortBreak" />



</androidx.constraintlayout.widget.ConstraintLayout>